[tool.poetry]
authors = ["Mathew Kirschbaum <mkirsch42@gmail.com>"]
description = ""
name = "machine-elf"
version = "0.1.0"

[tool.poetry.dependencies]
disnake = "^2.3.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
